# omvg

./: CMakeLists.txt  common.h  main.cpp  robust_essential_ba.cpp  run_cmake.sh  synth.cpp  synth.h
